# tts-vietnamese

./: .gitignore  README.md  SMOKE_TEST.md
.github/workflows/: build.yml
desktop-app/: pyproject.toml  test_logic.py
desktop-app/lito.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
simple-tts/: main.py  md_to_audio.py  pdf_to_audio.py  pyproject.toml  remove_english.py
web-app/: check_deploy.sh
