[project]
name = "lito"
version = "1.1.1"
description = "Lito: Simple & Lightweight Text to Speech"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.7",
    "pypdf>=6.4.1",
    "pyinstaller>=6.3.0",
    "pywin32-ctypes>=0.2.2",
    "pefile>=2023.2.7",
    "pywin32>=306",
    "packaging>=23.2",
    "altgraph>=0.17.4",
    "aiohttp>=3.9.1",
    "certifi>=2023.11.17",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "bandit",
    "pip-audit"
]

[tool.setuptools]
py-modules = ["main", "logic", "_version"]